modified:   .gitignore 	new file:   android/.gitignore 	new file:   android/app/.gitignore 	new file:   android/app/build.gradle 	new file:   android/app/capacitor.build.gradle 	new file:   android/app/proguard-rules.pro 	new file:   android/app/release/baselineProfiles/0/app-release.dm 	new file:   android/app/release/baselineProfiles/1/app-release.dm 	new file:   android/app/release/output-metadata.json 	new file:   android/app/src/androidTest/java/com/getcapacitor/myapp/ExampleInstrumentedTest.java 	new file:   android/app/src/main/AndroidManifest.xml 	new file:   android/app/src/main/java/com/finance/tracker/MainActivity.java 	new file:   android/app/src/main/res/drawable-land-hdpi/splash.png 	new file:   android/app/src/main/res/drawable-land-mdpi/splash.png 	new file:   android/app/src/main/res/drawable-land-xhdpi/splash.png 	new file:   android/app/src/main/res/drawable-land-xxhdpi/splash.png 	new file:   android/app/src/main/res/drawable-land-xxxhdpi/splash.png 	new file:   android/app/src/main/res/drawable-port-hdpi/splash.png 	new file:   android/app/src/main/res/drawable-port-mdpi/splash.png 	new file:   android/app/src/main/res/drawable-port-xhdpi/splash.png 	new file:   android/app/src/main/res/drawable-port-xxhdpi/splash.png 	new file:   android/app/src/main/res/drawable-port-xxxhdpi/splash.png 	new file:   android/app/src/main/res/drawable-v24/ic_launcher_foreground.xml 	new file:   android/app/src/main/res/drawable/ic_launcher_background.xml 	new file:   android/app/src/main/res/drawable/splash.png 	new file:   android/app/src/main/res/layout/activity_main.xml 	new file:   android/app/src/main/res/mipmap-anydpi-v26/ic_launcher.xml 	new file:   android/app/src/main/res/mipmap-anydpi-v26/ic_launcher_round.xml 	new file:   android/app/src/main/res/mipmap-hdpi/ic_launcher.png 	new file:   android/app/src/main/res/mipmap-hdpi/ic_launcher_foreground.png 	new file:   android/app/src/main/res/mipmap-hdpi/ic_launcher_round.png 	new file:   android/app/src/mai

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,20 +1,19 @@
 @import "tailwindcss";
 
-@font-face{
+@font-face {
   font-family: "bold";
   src: url("../assets/fonts/Nunito-Bold.ttf") format("truetype");
 }
-@font-face{
+@font-face {
   font-family: "medium";
   src: url("../assets/fonts/Nunito-SemiBold.ttf") format("truetype");
 }
-@font-face{
+@font-face {
   font-family: "regular";
   src: url("../assets/fonts/Nunito-Regular.ttf") format("truetype");
 }
 
-
-@theme{
+@theme {
   --font-r: "regular", sans-serif;
   --font-b: "bold", sans-serif;
   --font-m: "medium", sans-serif;
@@ -22,18 +21,21 @@
   --color-secondary: #928dab;
 }
 
-@layer base{
-  
-*{
-  transition: all .2s ease-in-out;
+@layer base {
+  * {
+    transition: all 0.2s ease-in-out;
     -webkit-tap-highlight-color: transparent;
-}
-*:focus {
+  }
+  *:focus {
     outline: none;
   }
 
-body{
-  font-family: var(--font-r);
-  background: var(--color-secondary);
+  body {
+    font-family: var(--font-r);
+    background: var(--color-secondary);
+  }
 }
+
+.react-datepicker-popper {
+  position: fixed !important;
 }
